@@ -4,7 +4,8 @@
 
 @section v2_10 Changes with libapreq2-2.10 (released Nov 11, 2008)
 
-- Clean up buggy apreq_hook_find_param().
+- C API [joes]
+  Clean up buggy apreq_hook_find_param().
 
 - Perl Glue Build [Philip M. Gollucci]
   config.status format changed format yet again in autoconf 2.62+.
